<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.upm.fi.jmn.validador.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mensaje"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >
            <TextView
	            android:id="@+id/textViewNumTarjeta"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/numTarjeta"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextNumTarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:lines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewExpira"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expira"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/editTextExpira"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:text="MM/AA" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewCcv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ccv"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/editTextCcv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:lines="1"
                    android:maxLength="3"
                    android:text="123"
                    android:textAlignment="center" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/botonEnviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enviar" />

            <Button
                android:id="@+id/botonBorrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/borrar" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
